src/FinancialForce Accounting/objects/codaBudget__c.object
<CustomObject>
    <customHelpPage>codahelpbudgetdef</customHelpPage>
    <description>Stores the details of budget and balance records that enable you to track the variance of actual period balances against budget.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualPeriod001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualPeriod002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualPeriod003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualPeriodDual001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualPeriodDual002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualPeriodDual003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualYTDPeriod001__c</fullName>
        <formula>BroughtForwardActual__c + ActualPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualYTDPeriod002__c</fullName>
        <formula>ActualYTDPeriod001__c + ActualPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualYTDPeriod003__c</fullName>
        <formula>ActualYTDPeriod002__c + ActualPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualYTDPeriodDual001__c</fullName>
        <formula>BroughtForwardActualDual__c + ActualPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualYTDPeriodDual002__c</fullName>
        <formula>ActualYTDPeriodDual001__c + ActualPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualYTDPeriodDual003__c</fullName>
        <formula>ActualYTDPeriodDual002__c + ActualPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual YTD Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BroughtForwardActualDual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Actual Dual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BroughtForwardActual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BroughtForwardBudgetDual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Budget Dual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BroughtForwardBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brought Forward Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodDual001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodDual002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodDual003__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDPeriod001__c</fullName>
        <formula>BroughtForwardBudget__c + BudgetPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDPeriod002__c</fullName>
        <formula>BudgetYTDPeriod001__c + BudgetPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDPeriod003__c</fullName>
        <formula>BudgetYTDPeriod002__c + BudgetPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDPeriodDual001__c</fullName>
        <formula>BroughtForwardBudgetDual__c + BudgetPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDPeriodDual002__c</fullName>
        <formula>BudgetYTDPeriodDual001__c + BudgetPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDPeriodDual003__c</fullName>
        <formula>BudgetYTDPeriodDual002__c + BudgetPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget YTD Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HashCode__c</fullName>
        <externalId>true</externalId>
        <label>Hash Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntersectDefinition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Intersect Definition</label>
        <referenceTo>codaIntersectDefinition__c</referenceTo>
        <relationshipLabel>Budgets and Balances</relationshipLabel>
        <relationshipName>BudgetsAndBalances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Budgets Local GLA</relationshipLabel>
        <relationshipName>BudgetsLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberPeriodUpdate__c</fullName>
        <label>DEPRECATED: Number Period Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportingBalanceTimestamp__c</fullName>
        <label>Reporting Balance Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TLICountPeriod000__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TLI Count Period 000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TLICountPeriod001__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TLI Count Period 001</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TLICountPeriod002__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TLI Count Period 002</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionsExistPeriod000__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEPRECATED:Transactions Exist Period 000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionsExistPeriod001__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEPRECATED:Transactions Exist Period 001</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionsExistPeriod002__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEPRECATED:Transactions Exist Period 002</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VariancePeriod001__c</fullName>
        <formula>ActualPeriod001__c - BudgetPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VariancePeriod002__c</fullName>
        <formula>ActualPeriod002__c - BudgetPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VariancePeriod003__c</fullName>
        <formula>ActualPeriod003__c - BudgetPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VariancePeriodDual001__c</fullName>
        <formula>ActualPeriodDual001__c - BudgetPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VariancePeriodDual002__c</fullName>
        <formula>ActualPeriodDual002__c - BudgetPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VariancePeriodDual003__c</fullName>
        <formula>ActualPeriodDual003__c - BudgetPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceYTDPeriod001__c</fullName>
        <formula>ActualYTDPeriod001__c - BudgetYTDPeriod001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceYTDPeriod002__c</fullName>
        <formula>ActualYTDPeriod002__c - BudgetYTDPeriod002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceYTDPeriod003__c</fullName>
        <formula>ActualYTDPeriod003__c - BudgetYTDPeriod003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceYTDPeriodDual001__c</fullName>
        <formula>ActualYTDPeriodDual001__c - BudgetYTDPeriodDual001__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period Dual 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceYTDPeriodDual002__c</fullName>
        <formula>ActualYTDPeriodDual002__c - BudgetYTDPeriodDual002__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period Dual 002</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VarianceYTDPeriodDual003__c</fullName>
        <formula>ActualYTDPeriodDual003__c - BudgetYTDPeriodDual003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance YTD Period Dual 003</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Year</label>
        <referenceTo>codaYear__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Budget and Balance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IntersectDefinition__c</columns>
        <columns>Year__c</columns>
        <columns>GeneralLedgerAccount__c</columns>
        <columns>Account__c</columns>
        <columns>BankAccount__c</columns>
        <columns>Product__c</columns>
        <columns>TaxCode__c</columns>
        <columns>Dimension1__c</columns>
        <columns>Dimension2__c</columns>
        <columns>Dimension3__c</columns>
        <columns>Dimension4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BUD{000000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets and Balances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>